[project]
name = "py-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alirex", email = "alirex.prime@gmail.com" }
]
requires-python = ">=3.14.0"
dependencies = [
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    # Better classes and validation.
    "pydantic>=2.12.4",
    # Numerical computing.
    "numpy>=2.3.5",
]

[dependency-groups]
dev = [
    # [typing]-[BEGIN]
    # Static type checker
    "mypy>=1.18.2",
    #
    "types-networkx>=3.5.0.20251106",
    "matplotlib-stubs>=0.3.11",
    # "microsoft-python-type-stubs",
    # [typing]-[END]
    #
    # [testing]-[BEGIN]
    # Tests.
    "pytest>=9.0.1",
    # [testing]-[END]
    # Extra checker. Used by Zed.
    "basedpyright>=1.34.0",
    # Task runner
    "poethepoet>=0.37.0",
    # Dead code checker
    "vulture>=2.14",
    # Code complexity checker
    "radon>=6.0.1",
]

# [tool.uv.sources]
# microsoft-python-type-stubs = { git = "https://github.com/microsoft/python-type-stubs.git" }

#[project.scripts]
#py-algorithms = "py_algorithms:main"

[tool.poe.tasks]
pca= [
    {cmd = "pre-commit run --all-files"},
]

# Run with: poe metrics or uv run poe metrics
# Check code quality: dead code, complexity, and maintainability
metrics = [
    {cmd = "vulture . --min-confidence 80 --exclude .venv,build,dist,docs,scripts,tests"},
    {cmd = "radon cc . -a -nb"},
    {cmd = "radon mi . -nb"}
]

# Run with: poe quality or uv run poe quality
# Full quality check: format, lint, type check, and metrics
quality = [
    {cmd = "ruff format ."},
    {cmd = "ruff check . --fix"},
    {cmd = "basedpyright --level error"},
    {cmd = "vulture . --min-confidence 80 --exclude .venv,build,dist,docs,scripts,tests"},
    {cmd = "radon cc . -a -nb"}
]

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

strict = true
# follow_imports = "silent"
# warn_redundant_casts = true
# warn_unused_ignores = true
# disallow_any_generics = true
# no_implicit_reexport = true
# disallow_untyped_defs = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
fix = true
show-fixes = true

extend-exclude = [
]

# [tool.ruff.lint.isort]
# # known-first-party = ["your_package_name"]  # CHANGE THIS
# combine-as-imports = true
# force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "ALL",
]
extend-ignore = [
    # Missing docstring.
    "D1",
    # flake8-future-annotations.
    "FA",
    # Missing type annotation for self and cls.
    "ANN1",
    # f-strings to format logging messages.
    "G004",
    # Consider {expression} instead of string join.
    "FLY002",
    # TODOs
    # Author.
    "TD002",
    # Link to issue
    "TD003",
    # Line contains a TODO or related comment
    "FIX",
    # Args and kwargs are not used and not annotated
    "ANN002",
    "ANN003",
    # Commented code
    "ERA001",
    # empty-comment
    "PLR2044",
    #
    #
    # print used.
    "T201",
]

task-tags = [
    "TODO",
    "FIXME",
    "HACK",
    "XXX",
    "[",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
# https://betterprogramming.pub/3-different-docstring-formats-for-python-d27be81e0d68

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true


[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    # Unused import.
    "F401",
]

"test_*.py" = [
    # Allow `assert` statements in tests.
    "S101",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "persyval.services.execution_queue.execution_queue.HandlerArgsBase"
]
runtime-evaluated-decorators = [
    "pydantic.validate_call",
    "app.command",
]

[tool.basedpyright]
typeCheckingMode = "strict"
