[project]
name = "py-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "alirex", email = "alirex.prime@gmail.com" }
]
requires-python = ">=3.14.3"
dependencies = [
    "matplotlib>=3.10.8",
    "networkx>=3.6.1",
    # Better classes and validation.
    "pydantic>=2.12.5",
    # Numerical computing.
    "numpy>=2.4.2",
    # Scientific computing.
    "scipy>=1.17.0",
]

[dependency-groups]
dev = [
    # [typing]-[BEGIN]
    # Static type checker
    "mypy>=1.19.1",
    #
    "types-networkx>=3.6.1.20251220",
    "matplotlib-stubs>=0.3.11",
    # [typing]-[END]
    #
    # [task]-[BEGIN]
    # Task runner
    "rust-just>=1.46.0",
    # [task]-[END]
    #
    # [testing]-[BEGIN]
    # Tests.
    "pytest>=9.0.2",
    # [testing]-[END]
    #
    # [linting]-[BEGIN]
    # Pre-commit runner
    "prek>=0.3.2",
    # Main linter/formatter
    "ruff>=0.15.0",
    # Extra checker. Used by Zed. Also check "match/case exhaustiveness".
    "basedpyright>=1.37.4",
    # [linting]-[END]
    #
    # [extra_code_quality]-[BEGIN]
    # Dead code checker
    "vulture>=2.14",
    # Code complexity checker
    "radon>=6.0.1",
    # [extra_code_quality]-[END]
]


#[project.scripts]
#py-algorithms = "py_algorithms:main"

[build-system]
requires = ["uv_build>=0.9.10,<0.10.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
addopts = "--strict-markers"

[tool.mypy]
plugins = [
    "pydantic.mypy",
]

strict = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff]
line-length = 120
fix = true
show-fixes = true

extend-exclude = [
]


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
extend-select = [
    "ALL",
]
extend-ignore = [
    # Missing docstring.
    "D1",
    # flake8-future-annotations.
    "FA",
    # Missing type annotation for self and cls.
    "ANN1",
    # f-strings to format logging messages.
    "G004",
    # Consider {expression} instead of string join.
    "FLY002",
    # TODOs
    # Author.
    "TD002",
    # Link to issue
    "TD003",
    # Line contains a TODO or related comment
    "FIX",
    # Args and kwargs are not used and not annotated
    "ANN002",
    "ANN003",
    # Commented code
    "ERA001",
    # empty-comment
    "PLR2044",
    #
    #
    # print used.
    "T201",
]

task-tags = [
    "TODO",
    "FIXME",
    "HACK",
    "XXX",
    "[",
]

[tool.ruff.lint.pydocstyle]
convention = "google"
# https://betterprogramming.pub/3-different-docstring-formats-for-python-d27be81e0d68

[tool.ruff.lint.flake8-comprehensions]
allow-dict-calls-with-keyword-arguments = true


[tool.ruff.lint.extend-per-file-ignores]
"__init__.py" = [
    # Unused import.
    "F401",
]

"test_*.py" = [
    # Allow `assert` statements in tests.
    "S101",
]

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = [
    "pydantic.BaseModel",
    "persyval.services.execution_queue.execution_queue.HandlerArgsBase"
]
runtime-evaluated-decorators = [
    "pydantic.validate_call",
    "app.command",
]

[tool.basedpyright]
# Rules: Use all in "error" level.
#   Please change non-critical rules to "warning" or disable them explicitly below.
#typeCheckingMode = "all"
typeCheckingMode = "strict"

## [disable_explicit]-[BEGIN]
## We don't need this.
#reportImplicitStringConcatenation = false
## [disable_explicit]-[END]
#
## [temporarily_lower_the_level]-[BEGIN]
## Temporarily lower the level of some rules to "warning" to reduce noise.
#
## `Any` usage reporting.
#reportAny = "warning" # Hard to control for now.
#reportExplicitAny = true # But keep this enabled.
#
#reportUnannotatedClassAttribute = "warning" # Maybe don't need it now.
#reportUnsafeMultipleInheritance = "warning" # Hard to control for now.
## [temporarily_lower_the_level]-[END]
